--- a/public/assets/css/now-ui-dashboard.css
+++ b/public/assets/css/now-ui-dashboard.css
@@ -575,10 +575,10 @@ fieldset[disabled] .navbar .navbar-nav>a.btn.active {
 .show>.btn-primary.dropdown-toggle,
 .show>.btn-primary.dropdown-toggle:focus,
 .show>.btn-primary.dropdown-toggle:hover {
-  background-color: #fa7a50;
+  background-color: rgb(12,38,70);
   color: #FFFFFF;
   box-shadow: none;
-  border-color: #fa7a50;
+  border-color: rgb(12,38,70);
 }
 
 .btn-primary:not([data-action]):not([class*="btn-outline-"]):hover {
@@ -621,7 +621,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-primary.btn-link:focus,
 .btn-primary.btn-link:active {
   background-color: transparent;
-  color: #fa7a50;
+  color: rgb(12,38,70);
   text-decoration: none;
   box-shadow: none;
 }
@@ -956,7 +956,7 @@ fieldset[disabled] .btn-neutral.active {
 .btn-neutral.btn-danger:focus,
 .btn-neutral.btn-danger:active,
 .btn-neutral.btn-danger:active:focus {
-  color: #ff5555 !important;
+  color: #fe1414 !important;
 }
 
 .btn-neutral.btn-info {
@@ -1013,13 +1013,13 @@ fieldset[disabled] .btn-neutral.active {
 .show>.btn-neutral.dropdown-toggle:focus,
 .show>.btn-neutral.dropdown-toggle:hover {
   background-color: #FFFFFF;
-  color: #fa7a50 !important;
+  color: rgb(12,38,70) !important;
   box-shadow: none;
 }
 
 .btn-neutral:hover,
 .btn-neutral:focus {
-  color: #fa7a50;
+  color: rgb(12,38,70);
 }
 
 .btn-neutral:hover:not(.nav-link),
@@ -1041,8 +1041,8 @@ fieldset[disabled] .btn-neutral.active {
 }
 
 .btn-outline-primary {
-  color: #f96332;
-  border-color: #f96332;
+  color: rgb(12,38,70);
+  border-color: rgb(12,38,70);
 }
 
 .btn-outline-primary:hover,
@@ -1057,8 +1057,8 @@ fieldset[disabled] .btn-neutral.active {
 .show>.btn-outline-primary.dropdown-toggle:focus,
 .show>.btn-outline-primary.dropdown-toggle:hover {
   background-color: transparent;
-  color: #fa7a50;
-  border-color: #fa7a50;
+  color: rgb(12,38,70);
+  border-color: rgb(12,38,70);
   box-shadow: none;
 }
 
@@ -2418,7 +2418,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 
 .navbar .navbar-nav .nav-link {
   text-transform: uppercase;
-  font-size: 0.7142em;
+  font-size: 0.9142em;
   padding: 0.5rem 0.7rem;
   line-height: 1.625rem;
   margin-right: 3px;
@@ -2431,7 +2431,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 
 .navbar .navbar-nav .nav-link i.fa,
 .navbar .navbar-nav .nav-link i.now-ui-icons {
-  font-size: 18px;
+  font-size: 20px;
   position: relative;
   top: 3px;
   text-align: center;
@@ -2440,7 +2440,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 
 .navbar .navbar-nav .nav-link i.now-ui-icons {
   top: 4px;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .navbar .navbar-nav .nav-link.profile-photo .profile-photo-small {
@@ -2473,7 +2473,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 
 .navbar .navbar-brand {
   text-transform: uppercase;
-  font-size: 0.8571em;
+  font-size: 0.9571em;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   line-height: 1.625rem;
@@ -2661,7 +2661,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
   -o-transition: all 150ms linear;
   -ms-transition: all 150ms linear;
   transition: all 150ms linear;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .dropdown-menu.dropdown-menu-right:before {
@@ -2679,7 +2679,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
   margin-right: 10px;
   position: relative;
   top: 4px;
-  font-size: 18px;
+  font-size: 20px;
   margin-top: -5px;
   opacity: .5;
 }
@@ -2738,7 +2738,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 
 .dropdown-menu .dropdown-item,
 .bootstrap-select .dropdown-menu.inner li a {
-  font-size: 0.8571em;
+  font-size: 0.9571em;
   padding-top: .6rem;
   padding-bottom: .6rem;
   margin-top: 5px;
@@ -2781,7 +2781,7 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 
 .dropdown-menu .dropdown-header:not([href]):not([tabindex]) {
   color: rgba(182, 182, 182, 0.6);
-  font-size: 0.7142em;
+  font-size: 0.9142em;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -3889,7 +3889,7 @@ Created using IcoMoon - icomoon.io
   position: relative;
   text-transform: uppercase;
   cursor: pointer;
-  font-size: 0.7142em;
+  font-size: 0.9142em;
   padding: 10px 8px;
   line-height: 1.625rem;
 }
