--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,5 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+@import '/home/mr_david/Documents/bawasa/node_modules/flag-icon-css/sass/flag-icons.scss';
